Fix downscale in Chrome
Downscaled images are blurry in Chromium-based browsers

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html {
   scroll-behavior: smooth;
   box-sizing: border-box;
   height: 100%;
+  image-rendering: -webkit-optimize-contrast; /* fix downscale blurryness in ChromE */
 }
 
 body {
